@@ -14,6 +14,10 @@ Version 1.3.0
 - "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
 - use msgfmt for tokens validation
 - double-clicking on invalid entry now pops up error description
+- [Unix] use GNOME theme icons if they are installed on the system
+- [Unix] use GtkSpell for spell checking (GTK+ 2 only)
+- poEdit no longer saves .po.poedit file, the headers were moved into
+  custom X-Poedit-* fields in .po file header
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
